# imaging-methods

./: .gitignore  2d_cond_av.py  2d_cond_av_apd.py  2d_cond_av_synth.py  README.md  README.txt  apd_barberpole.py  apd_phantom.py  blob_illustration2.py  blob_illustration3.py  blob_motion_illustration.py  commands.txt  cond_av_illustration.py  conditional_events.py  density_scan.py  density_scan_plots.py  get_discharge_raw_data.py  grid_plots_apd.py  i_mode_plots.py  imode_figure.py  plasma_discharges.json  plot_blob.py  plot_event.py  preprocessing.py  pyproject.toml  read.py  read_apd.py  requirements.txt  results.json  results_tmp.json  scan_results.py  show_data.py  synthetic_apd.py  synthetic_data.py  taud_apd_testing.py  tde_plots.py  test.py  tracking.py  tracking_synth.py  utils.py
2d_conditional_averaging/: package-lock.json  package.json  pnpm-lock.yaml  slides.md
2dca_manuscript/: barberpole_single.py  decoherence_synthetic_scan.py  decoherence_synthetic_single.py  process_movies.py  realization_with_wave_movies.py  size_single.py  synthetic_blob_2dca.py
density_scan/: aspect_ratio_plot.py  data_processing.py  dead_pixel_mask.py  density_scan.py  density_scan_plots.py  fwhm_plot.py  method_parameters.py  plasma_discharges.json  results.json  results_contour.json  results_fit.json  retrieve_data.py  update_discharges.py  utils.py
density_scan_results_contouring/: results_contouring.json
density_scan_results_fit/: results_fit.json
examples/: synthetic_data.py
figure_scripts/: 2d_fpp.py  analyze_raw_data.py  barberpole_data.npz  blob_2dca_ppcf.py  (+28 more)
(+156 files in other folders)
