[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom"
version = "0.0.1"
authors = [
  { name = "Juan Manuel Losada", email = "juan.m.losada@uit.no" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "nptyping",
    "matplotlib",
    "netcdf4",
    "black",
    "mypy",
    "fppanalysis",
    "velocity-estimation",
    "shapely",
]

[tool.setuptools]
packages = ["phantom"]
