[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imaging_methods"
version = "0.0.1"
authors = [
  { name = "Juan Manuel Losada", email = "juan.m.losada@uit.no" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "nptyping",
    "matplotlib",
    "netcdf4",
    "black",
    "mypy",
    "fppanalysis",
    "velocity-estimation",
    "shapely",
    "superposed-pulses",
]

[tool.setuptools]
packages = ["imaging_methods"]
